@@ -1,6 +1,7 @@
 4.24
 
 - Added: Max_camp_cnt_method mission parameter by longtimegamer
+- Added: If a player (accidentally) places an explosive too close to a MHQ (< 9m) the explosive will be removed and put back into his/her inventory
 - Changed: Make use of new triggerinterval stuff to run scripts at a specific time 
 - Changed: Added setTriggerinterval as new parameter to createTrigger and createTriggerLocal functions (by alexvladn)
 - Changed: Teamkillers are no longer pushed to the server lobby (slot selection) but they now can listen to a song in jail (something with bananas :))
